Description to Mod

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,6 +11,6 @@ logoFile="examplemod.png"
 credits="Thanks to: Team RAM(got me started), SkySom(codehelp), DivineAspect(ideas), Snurly(art), Felahliir(art) -- For your contributions and support!"
 authors="Drizzs"
 description='''
-
+When the world gets between you and the hidden light of magic, you can still call upon it.
 '''
 
