--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,7 @@ minecraft {
             }
         }
     }
+    accessTransformer = file('src/main/resources/META-INF/occult_at.cfg')
 }
 
 repositories {
@@ -82,7 +83,7 @@ repositories {
 
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.2-31.2.20'
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.21'
     compile fg.deobf('com.hrznstudio:titanium:1.15.2-2.4.2')
 
 }
